--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
-body						{ margin: 0px; padding: 0px; border-top: solid 10px #000; font-family: "Lucida Grande", Helvetica, Arial, sans-serif; }
+body						{ margin: 0px; padding: 0px; border-top: solid 20px #4d6270; font-family: "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-article						{ margin: 50px auto; width: 700px; }
+#page						{ width: 900px; margin: 50px auto; }
+h1							{ width: 900px; margin: 20px auto; letter-spacing: -0.03em; font-size: 24px; }
+
+sidebar						{ width: 250px; float: left; margin-right: 49px; border-right: solid 1px #999; }
+
+sidebar h2					{ font-size: 12px; margin: 0em 2em 0 0; margin-bottom: 0; border-bottom: solid 2px #999; }
+ul#files					{ list-style: none; margin: 0em 2em 2em 0; padding: 0; font-size: 12px; max-height: 250px; overflow-y: scroll; padding-right: 2px; }
+ul#files li					{ padding: 5px 0 5px 3px; border-bottom: solid 1px #ccc; font-weight: bold; color: #4d6270; }
+ul#files li:hover			{ background: #eee; cursor: pointer; }
+
+input[type="file"]			{ margin-bottom: 5px; }
+
+.button						{ color: #fff; background: #4d6270; padding: 5px 8px; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; font-size: 12px; font-weight: bold; text-decoration: none; border: none; }
+.button:hover				{ cursor: pointer; }
+
+article						{ width: 600px; float: left; }
 article small				{ display: block; margin-top: 10px; font-size: .7em; }
 article small ul			{ padding-left: 0; list-style: none; -webkit-column-count: 3; -webkit-column-gap: 20px; -moz-column-count: 3; -moz-column-gap: 20px; column-count: 3; column-gap: 20px; }
 
-h1							{ width: 700px; margin: 20px auto; letter-spacing: -0.03em; font-size: 24px; }
 
 #audio_container			{ margin-bottom: 2em; }
+#audio_container h2			{ margin: 0; margin-bottom: 5px; font-size: 14px; color: #999; }
 
-audio#audio 				{ width: 690px; }
+audio#audio 				{ width: 590px; }
 
-textarea#transcript			{ height: 300px; font-size: 1em; padding: 5px; width: 690px; line-height: 1.4em; }
+textarea#transcript			{ height: 300px; font-size: 1.2em; padding: 10px; width: 590px; line-height: 1.4em; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; font-family: Georgia, serif; }
